--- a/FunctionApp.AzureAD/appsettings.json
+++ b/FunctionApp.AzureAD/appsettings.json
@@ -2,9 +2,9 @@
 
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
-    "Domain": "",
-    "TenantId": "",
-    "ClientId": ""
+    "Domain": "{domain}.onmicrosoft.com",
+    "TenantId": "{TenantId}",
+    "ClientId": "{ClientId}"
     //"AllowWebApiToBeAuthorizedByACL": false
     //"CallbackPath": "/signin-oidc"
   }
